School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/valid/OwnTests_stepA/valid/test3.deca
// Description:
//    Programme minimaliste utilisant une affectation et println.
//
// Resultats:
//    1
//
// Historique:
//    cree le 22/12/2024

{
    float i = 0.5;
    println(i, "salut");
}
