School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/parser/testCommentMid.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024
/* test comm*/ent
aire*/

{
        println("Hello, world!");
}
